--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
     <!-- Primary Meta Tags -->
     <title>VDO Samurai - P2P Screen Sharing & Recording</title>
     <meta name="title" content="VDO Samurai - P2P Screen Sharing & Recording" />
-    <meta name="description" content="Peer-to-peer screen sharing and recording. No servers, no limits, complete privacy. Share your screen and record sessions directly with participants." />
+    <meta
+      name="description"
+      content="Peer-to-peer screen sharing and recording. No servers, no limits, complete privacy. Share your screen and record sessions directly with participants."
+    />
 
     <!-- Theme -->
     <meta name="theme-color" content="#ffffff" />
     <meta name="color-scheme" content="light dark" />
-    <style>body { background-color: #ffffff; }</style>
+    <style>
+      body {
+        background-color: #ffffff;
+      }
+    </style>
 
     <!-- Icons -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <!-- GitHub Pages SPA redirect handler -->
     <script>
-      (function() {
+      (function () {
         // Handle redirect from 404.html for GitHub Pages SPA support
         // Use _spa to avoid collision with room password parameter 'p'
         var params = new URLSearchParams(window.location.search);
